логирование завершения обновления кабинета